--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -82,3 +82,167 @@
     }
   }
 }
+
+//  ~\blog\assets\scss\custom.scss
+
+// --------------------------------
+// 菜单栏样式
+// 下拉菜单改圆角样式
+.menu {
+  padding-left: 0;
+  list-style: none;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  flex-grow: 1;
+  font-size: 1.6rem;
+  background-color: var(--card-background);
+
+  box-shadow: var(--shadow-l2); //改个阴影
+  display: none;
+  margin: 0; //改为0
+  border-radius: 10px; //加个圆角
+  padding: 30px 30px;
+
+  @include respond(xl) {
+    padding: 15px 0;
+  }
+
+  &,
+  .menu-bottom-section {
+    gap: 30px;
+
+    @include respond(xl) {
+      gap: 25px;
+    }
+  }
+
+  &.show {
+    display: flex;
+  }
+
+  @include respond(md) {
+    align-items: flex-end;
+    display: flex;
+    background-color: transparent;
+    padding: 0;
+    box-shadow: none;
+    margin: 0;
+  }
+
+  li {
+    position: relative;
+    vertical-align: middle;
+    padding: 0;
+
+    @include respond(md) {
+      width: 100%;
+    }
+
+    svg {
+      stroke-width: 1.33;
+
+      width: 20px;
+      height: 20px;
+    }
+
+    a {
+      height: 100%;
+      display: inline-flex;
+      align-items: center;
+      color: var(--body-text-color);
+      gap: var(--menu-icon-separation);
+    }
+
+    span {
+      flex: 1;
+    }
+
+    &.current {
+      a {
+        color: var(--accent-color);
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+//  ~\blog\assets\scss\custom.scss
+
+//------------------------------------------------
+//将滚动条修改为圆角样式
+//菜单滚动条美化
+.menu::-webkit-scrollbar {
+  display: none;
+}
+
+// 全局滚动条美化
+html {
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+}
+//  ~\blog\assets\scss\custom.scss
+
+//--------------------------------------------------
+//归档页面双栏
+/* 归档页面两栏 */
+@media (min-width: 1024px) {
+  .article-list--compact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: none;
+    box-shadow: none;
+    gap: 1rem;
+
+    article {
+      background: var(--card-background);
+      border: none;
+      box-shadow: var(--shadow-l2);
+      margin-bottom: 8px;
+      border-radius: 16px;
+    }
+  }
+}
+
+//  ~\blog\assets\scss\custom.scss
+
+//--------------------------------------------------
+//链接三栏
+@media (min-width: 1024px) {
+  .article-list--compact.links {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; //三个1fr即为三栏,两个1fr则为双栏,以此类推即可.
+    background: none;
+    box-shadow: none;
+    gap: 1rem;
+
+    article {
+      background: var(--card-background);
+      border: none;
+      box-shadow: var(--shadow-l2);
+      margin-bottom: 8px;
+      border-radius: var(--card-border-radius);
+
+      &:nth-child(odd) {
+        margin-right: 8px;
+      }
+    }
+  }
+}
+
